--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,7 +104,9 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set env
-      run: echo "REACT_APP_IP=${{ secrets.DEPLOY_HOST }}" > webapp/.env
+      run: |
+        echo "REACT_APP_IP=${{ secrets.DEPLOY_HOST }}" > webapp/.env
+        sed -i "s/localhost/${{ secrets.DEPLOY_HOST }}/" webapp/src/env.js
 
     - name: Publish to Registry
       uses: elgohr/Publish-Docker-Github-Action@v5
