--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   e2e-tests:
-    needs: [unit-tests]
+
+    needs: [unit-tests] 
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -137,6 +138,7 @@ jobs:
       name: Deploy over SSH
       runs-on: ubuntu-latest
       needs: [docker-push-users,docker-push-llmservice,docker-push-gatewayservice,docker-push-webapp]
+      if: github.event_name == 'push' 
       steps:
         - name: Deploy over SSH
           uses: fifsky/ssh-action@master
