--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,8 @@ name: Deploy on release
 
 on:
   push:
-    tags:
-    - 'v[0-9]+.[0-9]+.[0-9]+'
-  release:
-    types: [published]
-
+    branches: 
+      - master
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
@@ -137,8 +134,7 @@ jobs:
   deploy:
       name: Deploy over SSH
       runs-on: ubuntu-latest
-      needs: [docker-push-users,docker-push-llmservice,docker-push-gatewayservice,docker-push-webapp]
-      if: github.event_name == 'push' 
+      needs: [docker-push-users,docker-push-llmservice,docker-push-gatewayservice,docker-push-webapp] 
       steps:
         - name: Deploy over SSH
           uses: fifsky/ssh-action@master
