--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -129,7 +129,7 @@ jobs:
   deploy:
       name: Deploy over SSH
       runs-on: ubuntu-latest
-      needs: [docker-push-users,docker-push-llmservice,docker-push-gatewayservice,docker-push-webapp] 
+      needs: [docker-push-users,docker-push-llmservice,docker-push-gatewayservice,docker-push-webapp, docker-push-questions] 
       steps:
         - name: Deploy over SSH
           uses: fifsky/ssh-action@master
