--- a/questions/package.json
+++ b/questions/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "@types/sharp": "^0.31.1",
     "axios": "^1.6.8",
     "axios-mock-adapter": "^1.22.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "mongoose": "^8.2.0",
     "node-fetch": "^3.3.2",
+    "sharp": "^0.34.1",
     "tsx": "^4.19.3"
   },
   "devDependencies": {
