--- a/webapp/package.json
+++ b/webapp/package.json
@@ -32,7 +32,8 @@
     "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
     "web-vitals": "^3.5.1"
-  },  "scripts": {
+  },
+  "scripts": {
     "start": "react-scripts start",
     "build": "cross-env CI=false react-scripts build",
     "prod": "serve -s build",
@@ -42,6 +43,7 @@
     "test:e2e:register": "cross-env TEST=true start-server-and-test \"node e2e/test-environment-setup.js\" http://localhost:8000/health \"react-scripts start\" http://localhost:3000/ \"cd e2e && jest -i steps/register.steps.js\"",
     "test:e2e:category": "cross-env TEST=true start-server-and-test \"node e2e/test-environment-setup.js\" http://localhost:8000/health \"react-scripts start\" http://localhost:3000/ \"cd e2e && jest -i steps/category.steps.js\"",
     "test:e2e:chat": "cross-env TEST=true start-server-and-test \"node e2e/test-environment-setup.js\" http://localhost:8000/health \"react-scripts start\" http://localhost:3000/ \"cd e2e && jest -i steps/chat.steps.js\"",
+    "test:e2e:difficulty": "cross-env TEST=true start-server-and-test \"node e2e/test-environment-setup.js\" http://localhost:8000/health \"react-scripts start\" http://localhost:3000/ \"cd e2e && jest -i steps/difficulty.steps.js\"",
     "test:e2e:navigation": "cross-env TEST=true start-server-and-test \"node e2e/test-environment-setup.js\" http://localhost:8000/health \"react-scripts start\" http://localhost:3000/ \"cd e2e && jest -i steps/navigation.steps.js\"",
     "test:e2e:picturesgame": "cross-env TEST=true start-server-and-test \"node e2e/test-environment-setup.js\" http://localhost:8000/health \"react-scripts start\" http://localhost:3000/ \"cd e2e && jest -i steps/picturesgame.steps.js\"",
     "test:e2e:statistics": "cross-env TEST=true start-server-and-test \"node e2e/test-environment-setup.js\" http://localhost:8000/health \"react-scripts start\" http://localhost:3000/ \"cd e2e && jest -i steps/statistics.steps.js\"",
@@ -66,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^11.2.0",
     "@testing-library/react": "^14.2.2",
     "axios-mock-adapter": "^1.22.0",
     "cross-env": "^7.0.3",
@@ -75,6 +78,7 @@
     "jest-environment-node": "^29.7.0",
     "lazy-ass": "^2.0.3",
     "mongodb-memory-server": "^9.1.4",
+    "playwright": "^1.52.0",
     "puppeteer": "^21.11.0",
     "serve": "^14.2.1",
     "start-server-and-test": "^2.0.3"
